samples/_failures_safe/1761436048_807c85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b90652d.c: In function ‘main’:
./samples/SAFE/__tmp_0b90652d.c:150:12: error: missing terminating " character
  150 |     printf("\nTokenizing input
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0b90652d.c:150:5: error: expected expression at end of input
  150 |     printf("\nTokenizing input
      |     ^~~~~~
./samples/SAFE/__tmp_0b90652d.c:150:5: error: expected declaration or statement at end of input
